Import numpy in dev namespace